@@ -1,3 +1,14 @@
+Thu Apr  2 19:39:37 1998  Daniel Grana <grana@ie.iwi.unibe.ch>
+
+	* kpreview.*: widget which for now shows some info about a 
+        file/folder along with the first 20-30 lines of it
+        
+        * kfilepreview.*: added a new view which has a preview of any text
+        file in the right part
+        
+        * kfstest.cpp: added the new mode "preview" which shows the above 
+        view
+
 1998-03-30  Stephan Kulow  <coolo@kde.org>
 
 	* kfilesimpleview.cpp: fixed highlightning
